<resources>
    <string name="app_name">Health Stack</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="water_reminder">Water Reminder</string>
    <string name="calorie_counter">Calorie Counter</string>
    <string name="pedometer">Pedometer</string>
    <string name="hi">Hi!</string>
    <string name="intro_text">Let me help you \nkeep hydrated, \nactive and healthy</string>
    <string name="intro_text2">I want to be your considerate friend\n and need some data to know you better</string>
    <string name="welcome_image">Welcome image</string>
    <string name="let_s_go">LET\'S GO</string>
    <string name="choose_your_gender">Choose your gender</string>
    <string name="skip">SKIP</string>
    <string name="male_image">Male image</string>
    <string name="female_image">Female image</string>
    <string name="next">NEXT</string>
    <string name="ask_weight">How much do you weigh?</string>
    <string name="how_tall_are_you">How tall are you?</string>
    <string name="height_image_as_per_the_given_gender">Height image as per the given gender</string>
    <string name="ft">ft</string>
    <string name="in">in</string>
    <string name="feet_amp_inches">feet &amp; inches</string>
    <string name="or_sign">|</string>
    <string name="cm">cm</string>
    <string name="weight_image_based_on_gender">Weight Image based on gender</string>
    <string name="what_year_were_you_born">What year were you born?</string>
    <string name="wakeup_time">At what time do you \nwake up?</string>
    <string name="sleep_time">At what time do you sleep?</string>
    <string name="background_image">Background Image</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_account">Already have an account?</string>
    <string name="log_in"><u>Log In</u></string>
    <string name="you_re_all_set">You\'re all set!</string>
    <string name="text">Let’s create your \naccount</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="log_into_your_health_stack_account">Log into your Health Stack account</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="cms">cms</string>
    <string name="birth_image">Birth Image</string>
</resources>