<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".signUpOrLogIn.SignUpOrLoginFragment">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/background_image"
        android:src="@drawable/background_sign_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.467" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.743" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/sign_up_button"
        app:layout_constraintStart_toStartOf="@id/sign_up_button"
        app:layout_constraintEnd_toEndOf="@id/sign_up_button">
    <TextView
        android:id="@+id/have_account_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_account"/>

    <TextView
        android:id="@+id/log_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:text="@string/log_in"
        android:textColor="@color/purple_500"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>